# starting-ragchatbot-codebase

./: .flake8  .pre-commit-config.yaml  CLAUDE.md  README.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml  query-flow-diagram.md
.claude/: settings.local.json
backend/: .coverage  ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_document_processor.py  test_models.py  test_rag_system.py  test_search_tools.py  test_session_manager.py  test_vector_store.py
docs/: code-quality.md
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
